# backend/routes/admin/router.js
@@ -15,4 +15,16 @@ router.delete('/deleteaccount', function(request, response) {
     usercontrols.deleteUser(request, response);
 });
 
+router.put('/updateuser', function(request, response) {
+    usercontrols.updateUser(request, response);
+});
+
+router.get('/getuserbyuserid', function(request, response) {
+    usercontrols.getUser(request, response);
+});
+
+router.get('/getallusers', function(request, response) {
+    usercontrols.getAllUsers(request, response);
+});
+
 module.exports = router;
