# backend/routes/admin/usercontrols.js
@@ -45,7 +45,34 @@ const usercontrols = {
                 response.send("200");
             }
         });
-    }    
+    },
+
+    getAllUsers(request, response) {
+        console.log(request.body);
+
+        var userObject = {
+            'fname' : request.body['fname'],
+            'lname' : request.body['lname'],
+            'state' : null,
+            'password' : request.body['password']
+        };
+
+        if (!user) {
+            response.status(400).send("Not all required data was received with the request");
+            return;
+        }
+
+        user.getAllUsers(userObject, function(err, result) {
+            if (err) {
+                console.log(err);
+                response.send("500");
+            }
+            else {
+                console.log("Users listed");
+                response.send("200").json(result);
+            }
+        });
+    }
 }
 
 module.exports = usercontrols;
